rgbds-0.6.1/test/asm/align-unattainable.err
error: align-unattainable.asm(3):
    Section "X"'s alignment cannot be attained in WRAM0
error: Assembly aborted (1 error)!
