rgbds-0.6.1/test/asm/align-unattainable.asm
SECTION UNION "X", WRAM0

SECTION UNION "X", WRAM0, ALIGN[16]
